[gd_scene load_steps=12 format=3 uid="uid://bthrfct2iw6st"]

[ext_resource type="Texture2D" uid="uid://d22algs2f3jie" path="res://objects/entities/#projectiles/balls/textures/fireball.png" id="1_7rylf"]
[ext_resource type="Script" path="res://objects/entities/#projectiles/balls/scripts/projectile_ball.gd" id="1_kedl5"]
[ext_resource type="PackedScene" uid="uid://r6qrdfxr1tqs" path="res://objects/#components/attack/general/attacker.tscn" id="2_np3re"]
[ext_resource type="Material" uid="uid://jwyv345c8p54" path="res://objects/entities/#particles/particle_ball.tres" id="3_68nhf"]
[ext_resource type="Script" path="res://objects/#scripts/nodes/public/visibility/class_on_screen_notifier_tool_dir_2d.gd" id="4_01qov"]
[ext_resource type="PackedScene" uid="uid://j7wd8eq2xneo" path="res://objects/#components/entities/instantiater/basic_instantiater.tscn" id="4_jsu2k"]
[ext_resource type="PackedScene" uid="uid://q26573gwbilg" path="res://objects/#components/entities/sprite/sprite_rotation.tscn" id="4_sldfr"]
[ext_resource type="PackedScene" uid="uid://bq2g0ufv8rpcn" path="res://objects/#components/entities/sprite/sprite_facing.tscn" id="5_thj1v"]
[ext_resource type="PackedScene" uid="uid://blrfy7o1fjev" path="res://objects/entities/#effects/explosions/explosion_fire.tscn" id="7_3ulr0"]
[ext_resource type="Texture2D" uid="uid://cbp4d8642mlr4" path="res://objects/entities/#particles/textures/particle_fireball.png" id="8_e1kjt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwryn"]
radius = 8.0

[node name="Fireball" type="EntityBody2D"]
autobody = false
damp_enabled = true
damp_min_speed = 40.0
gravity_scale = 0.5
collision_layer = 4
collision_mask = 8
script = ExtResource("1_kedl5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_pwryn")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pwryn")

[node name="Attacker" parent="Area2D" instance=ExtResource("2_np3re")]
attacker_features = Array[StringName]([&"fire"])
metadata/_edit_pinned_properties_ = [&"attacker_features"]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 4
process_material = ExtResource("3_68nhf")
texture = ExtResource("8_e1kjt")
lifetime = 0.25
visibility_rect = Rect2(-16, -16, 32, 32)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7rylf")

[node name="SpriteFacing" parent="Sprite2D" instance=ExtResource("5_thj1v")]
property_path = NodePath("../..:velocity:x")
metadata/_edit_pinned_properties_ = [&"property_path"]

[node name="SpriteRotation" parent="Sprite2D" instance=ExtResource("4_sldfr")]
property_path = NodePath("../..:velocity:x")
rotation_speed = 562.5
metadata/_edit_pinned_properties_ = [&"property_path", &"rotation_speed"]

[node name="BasicInstantiater" parent="." instance=ExtResource("4_jsu2k")]
instance = ExtResource("7_3ulr0")

[node name="OnScreenNotifierToolDir2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(0, 0, 0, 0)
script = ExtResource("4_01qov")
specific_screen_sides = 3
actual_rect = Rect2(-8, -8, 16, 16)
metadata/_edit_pinned_properties_ = [&"specific_screen_sides", &"actual_rect"]

[connection signal="collided_ceiling" from="." to="." method="notify_run_out"]
[connection signal="collided_floor" from="." to="." method="ball_jump"]
[connection signal="collided_wall" from="." to="." method="notify_run_out"]
[connection signal="run_out" from="." to="." method="queue_free"]
[connection signal="run_out" from="." to="BasicInstantiater" method="create_instance"]
[connection signal="attack_got_received" from="Area2D/Attacker" to="." method="notify_run_out" unbinds=1]
[connection signal="screen_exited_from_specific_sides" from="OnScreenNotifierToolDir2D" to="." method="queue_free"]
